[project]
name = "Inversion-DNSBL-Generator"
version = "0.0.1"
description = "Generate malicious URL blocklists for DNSBL applications like pfBlockerNG or Pi-hole by scanning various public URL sources using the Safe Browsing API from Google and/or Yandex."
authors = [{ name = "Wu Tingfeng", email = "wutingfeng@outlook.com" }]
requires-python = "==3.13.*"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "apsw==3.51.3.0",
    "bandit==1.9.4",
    "beautifulsoup4==4.14.3",
    "black==26.3.1",
    "feedparser==6.0.12",
    "flake8==7.3.0",
    "lxml==6.0.2",
    "more-itertools==11.0.1",
    "pygithub==2.9.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "ray==2.54.1",
    "spavro",
    "tldextract==5.3.1",
    "tqdm==4.67.3",
    "types-aiofiles==25.1.0.20251011",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-python-dateutil==2.9.0.20260402",
    "urlextract==1.9.0",
]

[dependency-groups]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Inversion-DNSBL-Generator"]

[tool.uv.sources]
spavro = { git = "https://github.com/mikepk/spavro.git", rev = "d2b6e55ffe70eac109097a5f41b1aafda5297a56" }
